@@ -411,6 +411,11 @@
     <string name="keyboard_previous_fill_in_summary">Automatically switch back to the previous keyboard after executing \"Auto key action\"</string>
     <string name="keyboard_previous_lock_title">Lock database</string>
     <string name="keyboard_previous_lock_summary">Automatically switch back to the previous keyboard after locking the database</string>
+    <string name="custom_fields">Custom fields</string>
+    <string name="back_to_previous_keyboard">Back to previous keyboard</string>
+    <string name="select_entry">Select entry</string>
+    <string name="backspace">Backspace</string>
+    <string name="enter">Enter</string>
     <string name="autofill_close_database_title">Close database</string>
     <string name="autofill_close_database_summary">Close the database after an autofill selection</string>
     <string name="autofill_auto_search_title">Auto search</string>
