@@ -18,6 +18,8 @@
 -->
 <Keyboard
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:targetApi="o"
     android:verticalGap="8dp"
     android:horizontalGap="1%p"
     android:keyHeight="38dp">
@@ -26,25 +28,29 @@
         <Key
             android:codes="600"
             android:keyIcon="@drawable/ic_keyboard_white_24dp"
+            android:tooltipText="@string/back_to_previous_keyboard"
             android:keyWidth="17%p"
             android:horizontalGap="1%p"
             android:keyEdgeFlags="left"
-            android:isRepeatable="false"/>
+            android:isRepeatable="false" />
         <Key
             android:codes="620"
-            android:keyWidth="45%p"
             android:keyIcon="@drawable/ic_key_white_24dp"
+            android:tooltipText="@string/select_entry"
+            android:keyWidth="45%p"
             android:horizontalGap="2%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="-5"
             android:keyIcon="@drawable/ic_backspace_white_24dp"
+            android:tooltipText="@string/backspace"
             android:keyWidth="14%p"
             android:horizontalGap="2%p"
             android:isRepeatable="true"/>
         <Key
             android:codes="-4"
             android:keyIcon="@drawable/ic_keyboard_return_white_24dp"
+            android:tooltipText="@string/enter"
             android:keyWidth="17%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"
