@@ -18,6 +18,8 @@
 -->
 <Keyboard
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:targetApi="o"
     android:verticalGap="8dp"
     android:horizontalGap="1%p"
     android:keyHeight="38dp">
@@ -26,30 +28,35 @@
             android:codes="520"
             android:keyEdgeFlags="left"
             android:keyIcon="@drawable/ic_link_black_24dp"
+            android:tooltipText="@string/entry_url"
             android:keyWidth="15%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="500"
             android:keyIcon="@drawable/ic_person_white_24dp"
+            android:tooltipText="@string/entry_user_name"
             android:keyWidth="17%p"
             android:horizontalGap="2%p"
             android:isRepeatable="false" />
         <Key
             android:codes="510"
             android:keyIcon="@drawable/ic_password_white_24dp"
+            android:tooltipText="@string/entry_password"
             android:keyWidth="28%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="515"
             android:keyIcon="@drawable/ic_otp_white_24dp"
+            android:tooltipText="@string/entry_otp"
             android:keyWidth="17%p"
             android:horizontalGap="2%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="530"
             android:keyIcon="@drawable/ic_list_white_24dp"
+            android:tooltipText="@string/custom_fields"
             android:keyWidth="15%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"
@@ -60,6 +67,7 @@
         <Key
             android:codes="600"
             android:keyIcon="@drawable/ic_keyboard_white_24dp"
+            android:tooltipText="@string/back_to_previous_keyboard"
             android:keyWidth="17%p"
             android:horizontalGap="1%p"
             android:keyEdgeFlags="left"
@@ -67,24 +75,28 @@
         <Key
             android:codes="611"
             android:keyIcon="@drawable/ic_lock_white_24dp"
+            android:tooltipText="@string/lock"
             android:keyWidth="26%p"
             android:horizontalGap="2%p"
             android:isRepeatable="false" />
         <Key
             android:codes="620"
             android:keyIcon="@drawable/ic_key_white_24dp"
+            android:tooltipText="@string/select_entry"
             android:keyWidth="18%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"/>
         <Key
             android:codes="-5"
             android:keyIcon="@drawable/ic_backspace_white_24dp"
+            android:tooltipText="@string/backspace"
             android:keyWidth="14%p"
             android:horizontalGap="2%p"
             android:isRepeatable="true"/>
         <Key
             android:codes="-4"
             android:keyIcon="@drawable/ic_keyboard_return_white_24dp"
+            android:tooltipText="@string/enter"
             android:keyWidth="17%p"
             android:horizontalGap="1%p"
             android:isRepeatable="false"
