@@ -1,3 +1,4 @@
  * Unlock database by device credentials (PIN/Password/Pattern) #779 #102
  * Remove default database parameter when the file is no longer accessible #803
  * Move OTP button to the first view level in Magikeyboard #587
+ * Tooltips for Magikeyboard #586
