@@ -2,6 +2,7 @@ KeePassDX(2.9.3)
  * Unlock database by device credentials (PIN/Password/Pattern) #779 #102
  * Remove default database parameter when the file is no longer accessible #803
  * Move OTP button to the first view level in Magikeyboard #587
+ * Tooltips for Magikeyboard #586
 
 KeePassDX(2.9.2)
  * Managing OTP links from QR applications #556
